--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js",
-      "test": "jest"
+        "start": "node index.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "dependencies": {
-      "inquirer": "^8.2.4"
+        "inquirer": "^8.2.4",
+        "inquirer-maxlength-input-prompt": "^1.0.2"
     },
     "devDependencies": {
-      "jest": "^28.1.3"
+        "jest": "^28.1.3"
     }
-  }
-  
+}
